--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <header>
-        <h1>Aqui vai uma imagem</h1>
-        <ul>
-            <li>Escola</li>
-            <li>Estudantes</li>
-        </ul>
-    </header>
-    
+      <img class="logo" src="imagem.png" alt="";
+        
+  <ul>
+<li>Escola</li>
+<li>Estudantes</li>
+  </ul>
+</header>
+  
 </body>
 </html>
