--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <img class="escola-img" src="High School-amico.png" alt="">
 
     </section>
-    
+    <section class="estudantes"
+    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    <img src="download(1).jpg" alt=""
 </body>
 </html>
