--- a/index.html
+++ b/index.html
@@ -24,8 +24,29 @@
         <img class="escola-img" src="High School-amico.png" alt="">
 
     </section>
-    <section class="estudantes"
+    <section class="estudantes">
     <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-    <img src="download(1).jpg" alt=""
+    <img class="estudante-imagem" src="vini.jpeg" alt="">
+    <h3>vinicius junior</h3>
+    <img class="estudante-icone" src="instagram.png" alt="">
+    <img class="estudante-icone" src="twitter.png" alt="">
+    <img class="estudante-icone" src="facebook (1).png" alt="">
+
+    <img SRC="cris.jpeg" alt="">
+    <h3>cristiano ronaldo</h3>
+
+
+    <img src="mili.jpeg" alt="">
+    <h3>eder militão</h3>
+
+
+    <img src="beli.jpeg" alt="">
+    <h3>Jude Bellingham</h3>
+
+
+    <img src="rodri.jpeg" alt="">
+    <h3>rodrigo</h3>
+
+
 </body>
 </html>
